json-server has been added as well as everything has switched to using db.json instead of data.js

--- a/style.css
+++ b/style.css
@@ -54,3 +54,8 @@ form {
   display: flex;
   flex-direction: column;
 }
+.error {
+  text-align: center;
+  background: lightcoral;
+  padding: 20px;
+}
